k8s-app/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-service
spec:
  selector:
    app: httpApp 
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: default # default is staging certificate for testing, change to "le" to create real certificate 
spec:
  rules:
  - host: "simple-http-app.omar.gridtesting.xyz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-service
            port:
              number: 8080      
---
apiVersion: v1
kind: Pod
metadata:
  name: http-app
  labels:
    app: httpApp
spec:
  containers:
    - name: server
      image: omarelawady/ubuntu-ssh
      ports:
        - name: web
          containerPort: 8080
